<resources>

    <string name="app_name">AST Scoreboard</string>
    <string name="version">v1.2_DEV</string>

    <string name="title">Scoreboard\nConfiguration</string>
    <string name="connect_to_scoreboard">Connect to Scoreboard</string>
    <string name="scanning">Scanning for Scoreboard&#8230;</string>
    <string name="select_device">Select Scoreboard</string>
    <string name="no_devices_found">No Scoreboards Found</string>
    <string name="rescan">Rescan</string>
    <string name="title_activity_bluetooth_finder">Bluetooth Scan</string>
    <string name="title_activity_team_selection">TeamSelectionActivity</string>
    <string name="connected">Connected to Scoreboard</string>
    <string name="teamName">Team Name</string>
    <string name="vs">vs</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="new_game">New Game</string>
    <string name="new_match">New Match</string>
    <string name="select_blueooth_device">Select Blueooth Device</string>
    <string name="select_scoreboard_type">Select Scoreboard Type</string>
    <string name="standard">Standard</string>
    <string name="switch_sides">Switch Sides</string>
    <string name="select_team_names">Select Team Names</string>
    <string name="select_game_num">Select Number of Games</string>
    <string name="select_game_scores">Set Game Win Scores</string>
    <string name="set_game_num">Set Number of Games</string>
    <string name="game_score_1">Game 1 Win Score</string>
    <string name="game_score_2">Game 2 Win Score</string>
    <string name="game_score_3">Game 3 Win Score</string>
    <string name="sent">Sent configuration information!</string>
    <string name="emptyTeam1Name">Team Name 1 cannot be empty</string>
    <string name="emptyTeam2Name">Team Name 2 cannot be empty</string>
    <string name="emptyGameScore">All Game Win Scores must contain a value</string>
    <string name="invalidNumGames">Number of Games must be between 1&#8211;9</string>
    <string name="invalidGamesToWin">Games Needed to Win cannot be empty</string>
    <string name="invalidGamesToWin2">Number of Games must be more than Games Needed to Win</string>
    <string name="set_games_needed_to_win">Set Games Needed to Win</string>
    <string name="logo">Logo</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="set_theme">Set Scoreboard Theme</string>
    <string name="no_scoreboard_found">No Scoreboard Found</string>
    <string name="try_again">Try Again</string>
    <string name="scan_again">Scan Again</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="go_to_config">Go To Configuration</string>
    <string name="play_best_of">Play Best of</string>
    <string name="set_match_type">Set Match Type</string>
    <string name="cant_start_bt_disc">Can\'t Start Bluetooth Discovery</string>
    <string name="win_by_two">Win By Two</string>
    <string name="updateCurrent">Update Match</string>
    <string name="start_match">start_match</string>
    <string name="update_match">update_match</string>
    <string name="home">HOME</string>
    <string name="away">AWAY</string>
    <string name="reset">RESET</string>
    <string name="configure">Configure</string>
    <string name="team_1_plus">Team 1 +</string>
    <string name="team_2_plus">Team 2 Plus</string>
    <string name="team1minus">Team1Minus</string>
    <string name="team2Minus">Team2Minus</string>
    <string name="swap">Swap</string>
</resources>
