<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.advancedsportstechnologies.scoreboardconfig.ControlActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/configureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/bluePrimary"
                    android:onClick="configure"
                    android:text="@string/configure"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:background="@color/bluePrimary"
                    android:onClick="reset"
                    android:text="@string/reset"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/teamOneNameLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="76dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/home"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/divider"
                    app:layout_constraintHorizontal_bias="0.389"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/configureButton" />

                <ImageView
                    android:id="@+id/teamOnePlusImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="45dp"
                    android:contentDescription="@string/team_1_plus"
                    android:onClick="teamOnePlus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamOneNameLabel"
                    app:srcCompat="@drawable/plus" />

                <ImageView
                    android:id="@+id/teamOneMinusImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="88dp"
                    android:layout_marginBottom="200dp"
                    android:contentDescription="@string/team1minus"
                    android:onClick="teamOneMinus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamOnePlusImg"
                    app:srcCompat="@drawable/minus" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="71dp"
                    android:layout_marginLeft="71dp"
                    android:layout_marginTop="151dp"
                    android:layout_marginEnd="71dp"
                    android:layout_marginRight="71dp"
                    android:contentDescription="@string/swap"
                    android:onClick="swap"
                    app:layout_constraintEnd_toStartOf="@+id/teamTwoNameLabel"
                    app:layout_constraintStart_toEndOf="@+id/teamOneNameLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/swapside" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="8dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/teamTwoNameLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="76dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/away"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.606"
                    app:layout_constraintStart_toEndOf="@+id/divider"
                    app:layout_constraintTop_toBottomOf="@+id/resetButton" />

                <ImageView
                    android:id="@+id/teamTwoPlusImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:contentDescription="@string/team_2_plus"
                    android:onClick="teamTwoPlus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamTwoNameLabel"
                    app:srcCompat="@drawable/plus" />

                <ImageView
                    android:id="@+id/teamTwoMinusImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="88dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="200dp"
                    android:contentDescription="@string/team2Minus"
                    android:onClick="teamTwoMinus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:screenOrientation="portrait" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamTwoPlusImg"
                    app:srcCompat="@drawable/minus" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
